--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
   },
   "dependencies": {
     "aws-cdk-lib": "2.53.0",
+    "aws-xray-sdk": "^3.6.0",
     "constructs": "^10.0.0",
     "source-map-support": "^0.5.21"
   }
